test/out/_builds_ping-cloud-private-tenant_ping-cloud-base_k8s-configs_ping-cloud_base_pingdelegator_ff-external-ingress_kustomization.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: pingdelegator-ext-ingress
  namespace: ping-cloud
spec:
  ingressClassName: nginx-public
  rules:
  - host: ext-pingdelegator.ping-demo.com
    http:
      paths:
      - backend:
          service:
            name: pingdelegator
            port:
              number: 1443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ext-pingdelegator.ping-demo.com
